{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 40,
  "lineage": "99701034-71b1-e5d3-a1cd-f9b34274a411",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "aws_node_app_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:762233768038:loadbalancer/app/aws-node-app-load-balancer/b7fa937a64f2a508",
            "arn_suffix": "app/aws-node-app-load-balancer/b7fa937a64f2a508",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "aws-node-app-load-balancer-384112307.eu-north-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-north-1:762233768038:loadbalancer/app/aws-node-app-load-balancer/b7fa937a64f2a508",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "aws-node-app-load-balancer",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0a2f03fdd6985e148"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-07fc09aebc8ebdecd"
              },
              {
                "subnet_id": "subnet-0bc793deadfe716d9"
              }
            ],
            "subnets": [
              "subnet-07fc09aebc8ebdecd",
              "subnet-0bc793deadfe716d9"
            ],
            "vpc_id": "vpc-0d1a39fdda4ead250",
            "xff_header_processing_mode": "append",
            "zone_id": "Z23TAZ6LKFMNIO"
          },
          "dependencies": [
            "aws_security_group.lb_security_group",
            "aws_subnet.public_subnet",
            "aws_vpc.aws_node_app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_ips",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06c25d723386438b5",
            "arn": "arn:aws:ec2:eu-north-1:762233768038:elastic-ip/eipalloc-06c25d723386438b5",
            "association_id": "eipassoc-041deabd5a5057904",
            "domain": "vpc",
            "id": "eipalloc-06c25d723386438b5",
            "network_border_group": "eu-north-1",
            "network_interface": "eni-0216ac9e34bd94f26",
            "private_dns": "ip-172-17-2-235.eu-north-1.compute.internal",
            "private_ip": "172.17.2.235",
            "public_dns": "ec2-13-61-51-105.eu-north-1.compute.amazonaws.com",
            "public_ip": "13.61.51.105",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_vpc.aws_node_app_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-080c49e584fcfd297",
            "arn": "arn:aws:ec2:eu-north-1:762233768038:elastic-ip/eipalloc-080c49e584fcfd297",
            "association_id": "eipassoc-0b6de14a94c0b1e76",
            "domain": "vpc",
            "id": "eipalloc-080c49e584fcfd297",
            "network_border_group": "eu-north-1",
            "network_interface": "eni-0bc559d90253e5e55",
            "private_dns": "ip-172-17-3-147.eu-north-1.compute.internal",
            "private_ip": "172.17.3.147",
            "public_dns": "ec2-13-61-84-242.eu-north-1.compute.amazonaws.com",
            "public_ip": "13.61.84.242",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_vpc.aws_node_app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:762233768038:internet-gateway/igw-087a3274b40082039",
            "id": "igw-087a3274b40082039",
            "owner_id": "762233768038",
            "vpc_id": "vpc-0d1a39fdda4ead250"
          },
          "dependencies": [
            "aws_vpc.aws_node_app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "aws_node_app_lb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:762233768038:listener/app/aws-node-app-load-balancer/b7fa937a64f2a508/0edee7c9d1e10f8a",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-north-1:762233768038:targetgroup/aws-node-app-tg/0559e15fd8b0a6b1",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:762233768038:listener/app/aws-node-app-load-balancer/b7fa937a64f2a508/0edee7c9d1e10f8a",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-north-1:762233768038:loadbalancer/app/aws-node-app-load-balancer/b7fa937a64f2a508",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.aws_node_app_alb",
            "aws_lb_target_group.aws_node_app_lb_target_group",
            "aws_security_group.lb_security_group",
            "aws_subnet.public_subnet",
            "aws_vpc.aws_node_app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "aws_node_app_lb_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:762233768038:targetgroup/aws-node-app-tg/0559e15fd8b0a6b1",
            "arn_suffix": "targetgroup/aws-node-app-tg/0559e15fd8b0a6b1",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:762233768038:targetgroup/aws-node-app-tg/0559e15fd8b0a6b1",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-north-1:762233768038:loadbalancer/app/aws-node-app-load-balancer/b7fa937a64f2a508"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "aws-node-app-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "aws-node-app-tg"
            },
            "tags_all": {
              "Name": "aws-node-app-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0d1a39fdda4ead250"
          },
          "dependencies": [
            "aws_vpc.aws_node_app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06c25d723386438b5",
            "association_id": "eipassoc-041deabd5a5057904",
            "connectivity_type": "public",
            "id": "nat-04f7586dab0e53140",
            "network_interface_id": "eni-0216ac9e34bd94f26",
            "private_ip": "172.17.2.235",
            "public_ip": "13.61.51.105",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0bc793deadfe716d9"
          },
          "dependencies": [
            "aws_eip.nat_ips",
            "aws_internet_gateway.internet_gateway",
            "aws_subnet.public_subnet",
            "aws_vpc.aws_node_app_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-080c49e584fcfd297",
            "association_id": "eipassoc-0b6de14a94c0b1e76",
            "connectivity_type": "public",
            "id": "nat-0ba3fe388f0be77e8",
            "network_interface_id": "eni-0bc559d90253e5e55",
            "private_ip": "172.17.3.147",
            "public_ip": "13.61.84.242",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-07fc09aebc8ebdecd"
          },
          "dependencies": [
            "aws_eip.nat_ips",
            "aws_internet_gateway.internet_gateway",
            "aws_subnet.public_subnet",
            "aws_vpc.aws_node_app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-087a3274b40082039",
            "id": "r-rtb-0dd2a70ce369f8d8e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0dd2a70ce369f8d8e",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_vpc.aws_node_app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:762233768038:route-table/rtb-03eecbbbdb8a89fb5",
            "id": "rtb-03eecbbbdb8a89fb5",
            "owner_id": "762233768038",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-04f7586dab0e53140",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d1a39fdda4ead250"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_ips",
            "aws_internet_gateway.internet_gateway",
            "aws_nat_gateway.nat_gateway",
            "aws_subnet.public_subnet",
            "aws_vpc.aws_node_app_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:762233768038:route-table/rtb-0f6ecb7ee25e5d45e",
            "id": "rtb-0f6ecb7ee25e5d45e",
            "owner_id": "762233768038",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0ba3fe388f0be77e8",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d1a39fdda4ead250"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_ips",
            "aws_internet_gateway.internet_gateway",
            "aws_nat_gateway.nat_gateway",
            "aws_subnet.public_subnet",
            "aws_vpc.aws_node_app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bf8efc407e7791f9",
            "route_table_id": "rtb-03eecbbbdb8a89fb5",
            "subnet_id": "subnet-0063983a820fc6b44"
          },
          "dependencies": [
            "aws_eip.nat_ips",
            "aws_internet_gateway.internet_gateway",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.aws_node_app_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0133d127f1b2111e7",
            "route_table_id": "rtb-0f6ecb7ee25e5d45e",
            "subnet_id": "subnet-0e10f909d7d36af0f"
          },
          "dependencies": [
            "aws_eip.nat_ips",
            "aws_internet_gateway.internet_gateway",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.aws_node_app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "aws_node_app_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:762233768038:security-group/sg-0ca13a637e181762d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ca13a637e181762d",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": null,
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a2f03fdd6985e148"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "aws-node-app-security-group",
            "name_prefix": "",
            "owner_id": "762233768038",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d1a39fdda4ead250"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.lb_security_group",
            "aws_vpc.aws_node_app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:762233768038:security-group/sg-0a2f03fdd6985e148",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a2f03fdd6985e148",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "load-balancer-security-group",
            "name_prefix": "",
            "owner_id": "762233768038",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d1a39fdda4ead250"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.aws_node_app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_services_connectivity",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 0,
            "id": "sgrule-4105455238",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0ca13a637e181762d",
            "security_group_rule_id": "sgr-08663bd5a08c7c752",
            "self": false,
            "source_security_group_id": "sg-0ca13a637e181762d",
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.aws_node_app_security_group",
            "aws_security_group.lb_security_group",
            "aws_vpc.aws_node_app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:762233768038:subnet/subnet-0063983a820fc6b44",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "172.17.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0063983a820fc6b44",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "762233768038",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0d1a39fdda4ead250"
          },
          "dependencies": [
            "aws_vpc.aws_node_app_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:762233768038:subnet/subnet-0e10f909d7d36af0f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "172.17.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e10f909d7d36af0f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "762233768038",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0d1a39fdda4ead250"
          },
          "dependencies": [
            "aws_vpc.aws_node_app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:762233768038:subnet/subnet-0bc793deadfe716d9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "172.17.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bc793deadfe716d9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "762233768038",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0d1a39fdda4ead250"
          },
          "dependencies": [
            "aws_vpc.aws_node_app_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:762233768038:subnet/subnet-07fc09aebc8ebdecd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "172.17.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07fc09aebc8ebdecd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "762233768038",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0d1a39fdda4ead250"
          },
          "dependencies": [
            "aws_vpc.aws_node_app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "aws_node_app_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:762233768038:vpc/vpc-0d1a39fdda4ead250",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.17.0.0/16",
            "default_network_acl_id": "acl-0a410f8f2395c4a0e",
            "default_route_table_id": "rtb-0dd2a70ce369f8d8e",
            "default_security_group_id": "sg-0af8b530f6a1df990",
            "dhcp_options_id": "dopt-0c4af5627537c1e4e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d1a39fdda4ead250",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0dd2a70ce369f8d8e",
            "owner_id": "762233768038",
            "tags": {
              "Name": "aws-node-app-vpc"
            },
            "tags_all": {
              "Name": "aws-node-app-vpc"
            }
          }
        }
      ]
    }
  ]
}